[package]
name = "xplore"
version = "0.1.12"
edition = "2021"
description = "X/Twitter scraper for Rust"
license = "MIT"
repository = "https://github.com/zTgx/xplore"
readme = "README.md"
keywords = ["twitter", "api"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cookie = "0.16"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
totp-rs = "5.4"
urlencoding = "2.1.3"
regex = "1.5"
url = "2.5.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1" 
dotenv = "0.15"
log = "0.4.27"
async-trait = "0.1"
